Update index.html for value attending

--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@ function isInView(element) {
                 name: document.querySelector("#name").value,
                 email: document.querySelector("#email").value,
                 phone: document.querySelector("#phone").value,
-                attending: document.querySelector("#attending").value
+                attending: document.querySelector("#attending").checked
             };
     
             console.log("Datos enviados:", formData);
